# distributed-trajectory-planning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: admm-notes.md  presentation_outline.md
docs/final_report/: final_report.tex  references.bib
docs/lightning_talk/: lightning_talk.tex  presentation_script.md
experiments/: animate.py  runner.py
experiments/configs/: eight_drone_complete.yaml  four_drone_ring.yaml  two_drone_swap.yaml
experiments/configs/optimizers/: admm_default.yaml  admm_s2.yaml  admm_s3.yaml  centralized_default.yaml  centralized_from_admm.yaml  penalty_default.yaml  penalty_s3.yaml
notebooks/: 01_admm_verification.ipynb  02_penalty_verification.ipynb
scripts/: generate_lightning_figures.py  generate_videos.sh
src/dtp/: __init__.py  admm.py  centralized.py  dynamics.py  mpc.py  penalty.py  scenario.py  utils.py
tests/: test_penalty.py  test_smoke.py
