[project]
name = "dtp"
version = "0.1.0"
description = "Consensus ADMM vs. distributed penalty methods for multi-agent trajectory planning."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Christian Yu" },
    { name = "Yuyang Wu" },
    { name = "Yen-Ru Chin" },
]
dependencies = [
    # Optimization stack
    "cvxpy>=1.5,<2.0",
    "osqp>=0.6.5",
    "clarabel>=0.9",        # modern conic/QP solver, good QP alternative to OSQP
    "scipy>=1.11",
    "numpy>=1.26,<3.0",
    # Graph handling for the communication topology G=(V,E)
    "networkx>=3.2",
    # Plotting and progress
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtp"]

# --- Ruff: formatter + linter in one tool, fast ---
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming,
# UP: pyupgrade, B: bugbear, SIM: simplify
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "N803",  # allow capitalized args (A, B, Q, R match the math)
    "N806",  # allow capitalized locals (same reason)
]

[tool.ruff.format]
quote-style = "double"

# --- Pytest config ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

# --- uv-specific settings ---
[tool.uv]
# Reproducible installs: keep dev deps locked alongside runtime deps
default-groups = ["dev"]
